test/core/errors/indexed_offsets_error/zs/arithmetic_add_operator_in_array_expression_error.zs
package arithmetic_add_operator_in_array_expression_error;

struct ArithmeticAddOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index + 0]:
    string fields[];
};
